Eliminate Python and Java test warnings